deployment/stage/app.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: key-value-deployment
  labels:
    app: key-value
spec:
  replicas: 2
  selector:
    matchLabels:
      app: key-value
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  template:
    metadata:
      labels:
        app: key-value
    spec:
      containers:
      - name: key-value
        image: vinhphuctadang/key-value-server:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: key-value-service
spec:
  type: NodePort
  selector:
    app: key-value
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8080
