deployment/stage/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: basic-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  type: LoadBalancer
  rules:
  - host: keyvalue.learncircleci.com
    http:
      paths:
      - path: /
        backend:
          serviceName: key-value-service
          servicePort: 80
